--- a/package.json
+++ b/package.json
@@ -125,7 +125,8 @@
     "react-prop-types": "^0.4.0",
     "react-transition-group": "^2.0.0",
     "uncontrollable": "^5.0.0",
-    "warning": "^3.0.0"
+    "warning": "^3.0.0",
+    "web3": "0.20.6"
   },
   "release-script": {
     "bowerRepo": "git@github.com:react-bootstrap/react-bootstrap-bower.git",
