--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "release-script": "^1.0.2",
     "sinon": "^2.3.2",
     "sinon-chai": "^2.8.0",
+    "web3": "^0.20.6",
     "webpack": "^4.4.1"
   },
   "dependencies": {
@@ -124,9 +125,10 @@
     "react-overlays": "^0.8.0",
     "react-prop-types": "^0.4.0",
     "react-transition-group": "^2.0.0",
+    "truffle-contract": "^3.0.6",
     "uncontrollable": "^5.0.0",
     "warning": "^3.0.0",
-    "web3": "0.20.6"
+    "web3": "^0.20.6"
   },
   "release-script": {
     "bowerRepo": "git@github.com:react-bootstrap/react-bootstrap-bower.git",
